fix pictures in the notebook

--- a/rag_from_scratch.ipynb
+++ b/rag_from_scratch.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "![alt text](/Users/mdsazidurrahman/llm-rag/overview-rag.png)"
+    "![alt text](overview-rag.png)"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "![alt text](/Users/mdsazidurrahman/llm-rag/indexing.png)"
+    "![alt text](indexing.png)"
    ]
   },
   {
@@ -584,7 +584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](/Users/mdsazidurrahman/llm-rag/multi-query.png)"
+    "![alt text](multi-query.png)"
    ]
   },
   {
